Test to see if backend CICD is working correctly
